fix alignment between header and hero

--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,11 @@
 
 *{
 scroll-behavior: smooth;
+box-sizing: border-box;
 }
 body {
   font-family: 'cairo', sans-serif;
-background-color: #F5F5F5;
+background-color: #FFFFFF;
 }
 
 
